--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Javascript Tickets</title>
 </head>
 <body>
-    <h1>SLA MISSED</h1>
+    <h1>Hello Deja El Show</h1>
 
 </body>
 </html>
