--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Javascript Tickets</title></head><body><h1>SLA MISSED</h1><script src="bundle.js"></script></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Javascript Tickets</title><link href="bundle.css" rel="stylesheet"></head><body><h1>Hello Deja El Show</h1><script src="bundle.js"></script></body></html>
